--- a/indexAV copy.html
+++ b/indexAV copy.html
@@ -10,9 +10,9 @@
 <body>
     <nav id="inicio">
         <ul>
-            <li class="navegador"><a href="/Identikit/Index.html" target="_blank">Identikit</a></li>
-            <li class="navegador"><a href="index.html" >Blog</a></li>
-            <li class="navegador"><a href="/Portfolio/portfolio.html" target="_blank">Portfolio</a></li>
+            <li class="navegador"><a href="/Identikit/Index.html">Identikit</a></li>
+            <li class="navegador"><a href="https://g1anlucca.github.io/Blog/" >Blog</a></li>
+            <li class="navegador"><a href="/Portfolio/portfolio.html" >Portfolio</a></li>
         </ul>
     </nav>
 
