--- a/indexAV.html
+++ b/indexAV.html
@@ -62,7 +62,7 @@
                     <ol class="juegos-iconicos">
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">La leyenda de Zelda: Ocarina of Time (Nintendo 64)</p><br>
-                            <img src="/Imagenes/ZELDA.jpg" alt="Ocarina of Time" width="700"><br><br>
+                            <img src="Imagenes/ZELDA.jpg" alt="Ocarina of Time" width="700"><br><br>
                            <p>Ocarina of Time es, sin duda, uno de los mejores juegos de todos los tiempos. Es gracias a la transformación del género en su mundo 3D, el innovador diseño de puzles y su profunda trama que este juego ha revolucionado el concepto mismo. 
                             Sigue las dificultades de Link en su lucha contra el mal para evitar que Ganondorf y Hyrule caigan en sus garras.
                             Con la combinación perfecta de exploración, puzles y combate, Ocarina of Time estableció un estándar de oro en este género.</p>
