--- a/indexAV copy.html
+++ b/indexAV copy.html
@@ -63,19 +63,19 @@
                     <ol class="juegos-iconicos">
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">La leyenda de Zelda: Ocarina of Time (Nintendo 64)</p><br>
-                            <img src="/Imagenes/ZELDA.jpg" alt="Ocarina of Time" width="700"><br><br>
+                            <img src="Imagenes/ZELDA.jpg" alt="Ocarina of Time" width="700"><br><br>
                            <p>Ocarina of Time, fue uno de los mejores juegos en su tiempo. Es gracias a la transformación del género en su mundo 3D, el innovador diseño de puzles y su profunda trama que este juego ha revolucionado el concepto mismo. 
                             Sigue las dificultades de Link en su lucha contra el mal para evitar que Ganondorf y Hyrule caigan en sus garras.
                             Con la combinación perfecta de exploración, puzles y combate, Ocarina of Time estableció un estándar de oro en este género.</p>
                             <br><br> </li1> <br><br>
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">Uncharted 2: El reino de los ladrones (2009, PlayStation 3)</p><br>
-                            <img src="/Imagenes/unch2.jpg" alt="Uncharted 2 " width="200"><br><br>
+                            <img src="Imagenes/unch2.jpg" alt="Uncharted 2 " width="200"><br><br>
                             <p>Uncharted 2 es uno de los mejores juegos de acción y aventuras. Un juego excelente en cuanto a narrativa, con escenarios impresionantes y una mecánica de juego fluida. La búsqueda de Nathan Drake de una ciudad perdida contaba con combates, puzles y exploraciones de lo más intensos, todo ello en entornos diseñados por expertos.</p>
                         </li1><br>
                         <li1><br>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">The Last of Us (2013, PlayStation 3, PlayStation 4)</p><br>
-                            <img src="/Imagenes/tou.jpg" alt="The Last of Us" width="200"><br><br>
+                            <img src="Imagenes/tou.jpg" alt="The Last of Us" width="200"><br><br>
                             <p>Esta intensa historia postapocalíptica lleva a Joel y Ellie a través de un mundo devastado por una infección letal. The Last of Us destaca por combinar un combate visceral con momentos de exploración serena, ofreciendo una historia que conectó profundamente con los jugadores. Su equilibrio entre acción y aventura narrativa lo convirtió en un clásico instantáneo.</p>
                         </li1>
                     </ol>
