--- a/indexDep.html
+++ b/indexDep.html
@@ -55,7 +55,7 @@
                     <ol class="juegos-iconicos">
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">Fifa 25</p><br>
-                            <img src="/Imagenes/fifa25.jpg" alt="FIFA 25" width="700"><br><br>
+                            <img src="Imagenes/fifa25.jpg" alt="FIFA 25" width="700"><br><br>
                         <p>FIFA 25 es la última entrega de la popular saga de simuladores de fútbol desarrollada por EA Sports. 
                             Este título destaca por sus mejoras en la jugabilidad, gráficos realistas y nuevas animaciones que 
                             ofrecen una experiencia más inmersiva en el campo. Incluye modos clásicos como Carrera y Ultimate Team, 
@@ -67,7 +67,7 @@
                     <br><br>
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">NBA 2k25</p><br>
-                            <img src="/Imagenes/nba2k.jpg" alt="NBA2k25 " width="200"><br><br>
+                            <img src="Imagenes/nba2k.jpg" alt="NBA2k25 " width="200"><br><br>
                             <p>NBA 2K25 es la nueva entrega de la reconocida saga de simuladores de baloncesto desarrollada por 2K Sports. 
                                 Este título destaca por su realismo gráfico, animaciones mejoradas y una jugabilidad refinada que captura la intensidad de la NBA. 
                                 Incluye modos populares como Mi Carrera, Mi Equipo y la Liga, permitiendo a los jugadores crear su propio atleta, 
@@ -77,7 +77,7 @@
                         </li1><br>
                         <li1><br>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">Madden NFL 25</p><br>
-                            <img src="/Imagenes/madden.jpg" alt="Madden NFL 25" width="200"><br><br>
+                            <img src="Imagenes/madden.jpg" alt="Madden NFL 25" width="200"><br><br>
                             <p>Madden NFL 25 es la última edición de la reconocida franquicia de simuladores de fútbol 
                                 americano desarrollada por EA Sports. Este juego celebra el legado de la saga con mejoras en la jugabilidad, 
                                 gráficos más realistas y animaciones avanzadas que capturan la intensidad de la NFL. Incluye modos clásicos 
