--- a/indexEstr.html
+++ b/indexEstr.html
@@ -66,7 +66,7 @@
                     <ol class="juegos-iconicos">
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">Age of Empires 2</p><br>
-                            <img src="/Imagenes/ageofemp.jpg" alt="Age of Empires 2" width="700"><br><br>
+                            <img src="Imagenes/ageofemp.jpg" alt="Age of Empires 2" width="700"><br><br>
                         <p>Age of Empires 2 es uno de los juegos de estrategia en tiempo real más influyentes y populares de la historia. 
                             Lanzado en 1999, permite a los jugadores guiar una civilización desde la Edad Oscura hasta la Edad Imperial, 
                             gestionando recursos, construyendo ejércitos y enfrentándose a otros imperios. Su profundidad estratégica, 
@@ -76,7 +76,7 @@
                     </li1> <br><br>
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">Starcraft 2</p><br>
-                            <img src="/Imagenes/starcraft.jpg" alt="Starcraft 2 " width="200"><br><br>
+                            <img src="Imagenes/starcraft.jpg" alt="Starcraft 2 " width="200"><br><br>
                             <p>Starcraft 2 es un referente en el género de estrategia en tiempo real, desarrollado por 
                                 Blizzard Entertainment. Lanzado en 2010, destaca por su jugabilidad competitiva, equilibrio 
                                 entre las tres razas (Terran, Zerg y Protoss) y una campaña envolvente. Su sistema de juego 
@@ -86,7 +86,7 @@
                         </li1><br>
                         <li1><br>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">Civilization VI</p><br>
-                            <img src="/Imagenes/civilization.jpg" alt="Civilization VI" width="200"><br><br>
+                            <img src="Imagenes/civilization.jpg" alt="Civilization VI" width="200"><br><br>
                             <p>Civilization VI es un juego de estrategia por turnos desarrollado por Firaxis Games, 
                                 donde los jugadores lideran una civilización desde la antigüedad hasta la era moderna.
                                  El objetivo es expandir el imperio, investigar tecnologías, establecer relaciones diplomáticas 
