--- a/indexRol.html
+++ b/indexRol.html
@@ -61,14 +61,14 @@
                     <ol class="juegos-iconicos">
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;"> Rol de Mesa</p><br>
-                            <img src="/Imagenes/Rol.jpg" alt="Rol de Mesa" width="700"><br><br>
+                            <img src="Imagenes/Rol.jpg" alt="Rol de Mesa" width="700"><br><br>
                            <p>En los juegos de rol de mesa, como Dungeons & Dragons o Call of Cthulhu, un grupo de jugadores interpreta
                              a sus personajes mientras un narrador (o director de juego) plantea desafíos y escenarios.
                              El resultado es una historia compartida, moldeada por decisiones, tiradas de dados y creatividad colectiva.</p>
                             <br><br> </li1> <br><br>
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">RPG Digital</p><br>
-                            <img src="/Imagenes/ROLdig.jpeg" alt="RPG Digital " width="200"><br><br>
+                            <img src="Imagenes/ROLdig.jpeg" alt="RPG Digital " width="200"><br><br>
                             <p>Los RPG digitales trasladan estas experiencias a videojuegos. El jugador personaliza a su personaje,
                                  explora mundos abiertos o estructurados, combate enemigos, toma decisiones morales y 
                                  sigue una narrativa que puede cambiar según sus acciones.<br><br> Algunos ejemplos de estos juegos pueden ser: <br> 
