--- a/indexSim.html
+++ b/indexSim.html
@@ -60,12 +60,12 @@
                     <ol class="juegos-iconicos">
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">The Sims 4</p><br>
-                            <img src="/Imagenes/sims4.jpg" alt="The Sims 4" width="700"><br><br>
+                            <img src="Imagenes/sims4.jpg" alt="The Sims 4" width="700"><br><br>
                            <p>¿De qué se trata? The Sims 4 es un simulador de vida donde creás y controlás personas llamadas "Sims". Podés diseñar casas, formar familias, elegir carreras y vivir historias únicas. <br> ¿Qué hacés como jugador? Administrás las necesidades, relaciones y aspiraciones de tus Sims. Decidís cómo pasan sus días, qué trabajos eligen, con quién se relacionan y cómo evolucionan sus vidas. ¡Podés crear desde situaciones cotidianas hasta escenarios totalmente insólitos!</p>
                             <br><br> </li1> <br><br>
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;"> Farming Simulator 22</p><br>
-                            <img src="/Imagenes/farming22.png" alt="Farming Simulator 22 " width="100"><br><br>
+                            <img src="Imagenes/farming22.png" alt="Farming Simulator 22 " width="100"><br><br>
                             <p> ¿De qué se trata? Es un simulador agrícola realista donde gestionás tu propia granja. Incluye cultivos, cría de animales y manejo de maquinaria moderna.
                             <br>¿Qué hacés como jugador? Sembrás y cosechás diferentes tipos de cultivos, criás vacas, ovejas y pollos, 
                             y expandís tu granja comprando terrenos y maquinaria. Debés planificar, invertir y optimizar tus recursos para crecer
@@ -73,14 +73,14 @@
                         </li1><br>
                         <li1><br>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">Microsoft Flight Simulator</p><br>
-                            <img src="/Imagenes/flightsimulator.jpg" alt="Microsoft Flight Simulator" width="200"><br><br>
+                            <img src="Imagenes/flightsimulator.jpg" alt="Microsoft Flight Simulator" width="200"><br><br>
                             <p>¿De qué se trata? Es uno de los simuladores de vuelo más avanzados, con recreaciones realistas de aviones y escenarios de todo el mundo.
                            <br> ¿Qué hacés como jugador? Pilotás aviones comerciales, privados o de carga, siguiendo procedimientos reales de navegación y 
                             comunicación. Elegís rutas, gestionás el clima y aprendés sobre aviación mientras explorás el planeta desde el aire.</p>
                         </li1>
                         <li1><br>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">Cities: Skylines II</p><br>
-                            <img src="/Imagenes/cities.jpg" alt="The Last of Us" width="200"><br><br>
+                            <img src="Imagenes/cities.jpg" alt="The Last of Us" width="200"><br><br>
                             <p> ¿De qué se trata? Es un simulador de construcción y gestión de ciudades. 
                                 Te pone en el rol de alcalde para diseñar y administrar una metrópolis.
                                 <br>¿Qué hacés como jugador? Planificás calles, zonas residenciales, comerciales e industriales, 
