--- a/indexTerr.html
+++ b/indexTerr.html
@@ -66,7 +66,7 @@
                     <ol class="juegos-iconicos">
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">Outlast</p><br>
-                            <img src="/Imagenes/outlast.jpg" alt="Outlast" width="700"><br><br>
+                            <img src="Imagenes/outlast.jpg" alt="Outlast" width="700"><br><br>
                         <p>Outlast es un juego de terror en primera persona que se desarrolla en un manicomio abandonado y plagado de horrores.
                              El jugador asume el papel de un periodista de investigación que, armado solo con una cámara de visión nocturna, debe 
                              explorar el hospital psiquiátrico y descubrir sus oscuros secretos. La atmósfera opresiva, la ausencia de armas y la 
@@ -75,7 +75,7 @@
                         <br><br>
                         <li1>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">Silent Hill</p><br>
-                            <img src="/Imagenes/silenthill.jpg" alt="Silent Hill " width="200"><br><br>
+                            <img src="Imagenes/silenthill.jpg" alt="Silent Hill " width="200"><br><br>
                             <p>Silent Hill es una de las sagas más emblemáticas del género de terror psicológico en los videojuegos. 
                                 Ambientado en un misterioso pueblo cubierto de niebla, el juego destaca por su atmósfera opresiva, 
                                 su inquietante diseño de sonido y su narrativa profunda cargada de simbolismo. Los jugadores exploran 
@@ -86,7 +86,7 @@
                         </li1><br>
                         <li1><br>
                             <p style="font-size: 1.5em; display: flex; justify-content: center;">The Evil Within</p><br>
-                            <img src="/Imagenes/theevilwit.jpg" alt="The Evil Within" width="200"><br><br>
+                            <img src="Imagenes/theevilwit.jpg" alt="The Evil Within" width="200"><br><br>
                             <p>The Evil Within es un juego de terror de supervivencia dirigido por Shinji Mikami, creador de 
                                 Resident Evil. El jugador asume el papel del detective Sebastián Castellanos, quien se
                                  ve atrapado en un mundo distorsionado y plagado de horrores sobrenaturales. El juego 
