--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li class="navegador"><a href="index.html">Inicio</a></li>
-            <li class="navegador"><a href="/Portfolio/portfolio.html">Portfolio</a></li>
+            <li class="navegador"><a href="https://g1anlucca.github.io/Portfolio/">Portfolio</a></li>
             <li class="navegador"><a href="/Identikit/Index.html">Identikit</a></li>
         </ul>
     </nav>
