--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
     <nav>
         <ul>
-            <li class="navegador"><a href="index.html">Inicio</a></li>
+            <li class="navegador"><a href="https://g1anlucca.github.io/Linktree/">Inicio</a></li>
             <li class="navegador"><a href="https://g1anlucca.github.io/Portfolio/">Portfolio</a></li>
             <li class="navegador"><a href="/Identikit/Index.html">Identikit</a></li>
         </ul>
